--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+
+#root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
