--- a/src/assets/colors/colors.scss
+++ b/src/assets/colors/colors.scss
@@ -1,7 +1,10 @@
 
-$hovered--text--color: #646464;
 $main--text--color: #212121;
+$secondary--text--color: #646464;
+$nav--button--background: #CAA892;
 $quotes--color: #B0855B;
 $button--color: #37806B;
 $input--color: #EEEEEE;
+$footer--background--color: #F8F8F8;
+$error--color: red;
 
