--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -46,3 +46,16 @@
         background-color: hsl(200, 20%, 95%);
     }
 }
+
+@media screen and (min-width: 992px) and (max-width: 1199.98px) {
+    .skeleton-box {
+        display: flex;
+        width: 991px;
+    }
+}
+@media screen and (max-width: 991.98px) {
+    .skeleton-box {
+        display: flex;
+        width: 500px;
+    }
+}
