--- a/src/components/BlockAbout/BlockAbout.scss
+++ b/src/components/BlockAbout/BlockAbout.scss
@@ -6,30 +6,53 @@
     &__container {
         max-width: 1440px;
         width: 100%;
-        @include flex(row, space-between, start);
+        @include flex(row, space-between, center);
     }
     &__image {
-        width: 680.79px;
-        height: 700.55px;
+        width: 50%;
+        height: auto;
     }
     &__text {
-        margin-top: 50px;
         @include flex (column, space-around, start);
-        width: 546px;
+        width: 45%;
+        height: auto;
         &-subtitle {
             @include subtitle-font;
         }
         &-title {
             @include title-font;
             margin: 20px 0;
-            width: 540px;
+            width: 100%;
             line-height: 57px;
             
         }
         &-description {
             @include description-font;
-            width: 546px;
+            width: 100%;
             margin-bottom: 50px;
+        }
+    }
+}
+@media screen and (max-width: 760px) {
+    .about{
+        &__container {
+        flex-direction: column;
+        }
+        &__image {
+            margin-bottom: 20px;
+            width: 80%;
+        }
+        &__text {
+            align-items: center;
+            width: 90%;
+            &-title {
+                font-size: 40px;
+                line-height: 40px;
+                text-align: center;
+            }
+            &-description {
+                text-align: center;
+            }
         }
     }
 }
