--- a/src/components/Feedbacks/Feedbacks.scss
+++ b/src/components/Feedbacks/Feedbacks.scss
@@ -15,6 +15,7 @@
     &__title {
         @include title-font;
         line-height: 72px;
+        text-align: center;
     }
     &__carousel {
         &-path {
@@ -47,6 +48,7 @@
         @include flex(row, space-evenly, center);
         width: 100%;
         margin-top: 100px;
+        flex-wrap: wrap;
     }
     &__profile {
         width: 39%;
@@ -138,5 +140,27 @@
         top: 0;
         right: 110px;
         
+    }
+}
+
+@media screen and (max-width: 1042.9px) {
+    .feedbacks {
+        &__container {
+            padding: 100px 0;
+        }
+        &__title {
+            font-size: 52px;
+            line-height: 52px;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        &__blocks {
+            flex-direction: column;
+            height: 600px;
+            margin-top: 50px;
+        }
+        &__profile {
+            width: 70%;
+        }
     }
 }
