--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,7 +13,9 @@
         @include flex(row, space-between, start);
     }
     &__logo {
+        &-img {
         margin-bottom: 15px;
+        }
         &-text {
             margin:0;
             font-family: 'Open Sans';
@@ -97,5 +99,73 @@
     
     span {
         color: #37806B;
+    }
+}
+@media screen and (min-width: 760.9px) and (max-width: 1199.9px ) {
+    .footer {
+        padding-top: 50px;
+        &__container {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height: 600px;
+        }
+        &__logo {
+            @include flex(column, center, center);
+        }
+        &__blocks {
+            width: 80%;
+        }
+        &__socials {
+            flex-direction: row;
+            width: 40%;
+            h4 {
+                width: 50%;
+                text-align: center;
+            }
+            &-box {
+                margin: 0;
+            }
+            
+        }
+    }
+}
+@media screen and (max-width: 760px ) {
+    .footer {
+        padding-top: 50px;
+        &__container {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height: 900px;
+        }
+        &__logo {
+            @include flex(column, center, center);
+            margin-bottom: 25px;
+        }
+        &__blocks {
+            width: 90%;
+            flex-direction: column;
+            align-items: center;
+            h4, p {
+                text-align: center;
+            }
+            h4 {
+                margin-bottom: 0;
+                margin-top: 15px;
+            }
+        }
+        &__socials {
+            flex-direction: row;
+            width: 60%;
+            h4 {
+                width: 50%;
+                text-align: center;
+            }
+            &-box {
+                margin: 0;
+            }
+            
+        }
     }
 }
