--- a/src/components/InfoBlock/InfoBlock.scss
+++ b/src/components/InfoBlock/InfoBlock.scss
@@ -3,6 +3,7 @@
 @import '../../assets/fonts/mixins.scss';
 
 .info {
+
     &__container {
         max-width: 1440px;
         width: 100%;
@@ -21,16 +22,40 @@
             font-weight: 600;
             font-size: 72px;
             line-height: 78px;
-            width: 560px;
+            width: 100%;
             color: $main--text--color;
         }
         &-description {
             @include description-font;
-            width: 632.27px;
+            width: 100%;
         }
     } 
     &__image {
-        width: 630.79px;
-        height: 560.55px;
+        width: 50%;
+        height: auto;
+    }
+}
+@media screen and (max-width: 760px) {
+    .info{
+        &__container {
+        flex-direction: column;
+        }
+        &__block {
+            width: 90%;
+            height: 458px;
+            align-items: center;
+            &-title {
+                font-size: 52px;
+                line-height: 48px;
+                text-align: center;
+            }
+            &-description {
+                text-align: center;
+            }
+        }
+        &__image {
+            width: 90%;
+            height: auto;
+        }
     }
 }
