--- a/src/components/ServiceBlock/ServiceBlock.scss
+++ b/src/components/ServiceBlock/ServiceBlock.scss
@@ -19,6 +19,8 @@
     &__filter {
         width: 70%;
         @include flex(row, space-between, center);
+        flex-wrap: wrap;
+        align-content: space-between;
         margin: 50px 0 100px;
         &-item {
             font-family: 'Open Sans';
@@ -44,12 +46,12 @@
     }
     &__directions {
         width: 100%;
-        max-width: 1640px;
+        max-width: 1440px;
         @include flex(row, space-evenly, center);
         flex-wrap: wrap;
         margin-bottom: 350px;
         &-container {
-            width: 30%;
+            width: 400px;
             margin-bottom: 88px;
         }
         &-container.architecture {
@@ -69,6 +71,27 @@
                 height: 34.11px;
                 margin-right:10px;
             }
+        }
+    }
+}
+@media screen and (max-width: 1199.9px ) {
+    .service {
+        &__container {
+            margin-top: 100px;
+            align-items: center;
+        }
+        &__directions {
+            margin-bottom: 100px;
+        }
+        &__filter {
+            width: 100%;
+            height: 100px;
+        }
+        &__subtitle {
+            text-align: center;
+        }
+        &__title {
+            text-align: center;
         }
     }
 }
