--- a/src/components/Shop/Shop.scss
+++ b/src/components/Shop/Shop.scss
@@ -25,4 +25,17 @@
         text-align: center;
         margin: 0 0 70px;
     }
+    
+}
+
+@media screen and (max-width: 760px ){
+    .shop {
+        &__container {
+            padding: 50px 0;
+        }
+        &__title {
+            font-size: 40px;
+        }
+    }
+
 }
