fixed responsive design

--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -18,6 +18,7 @@
     &__title {
         @include title-font;
         margin: 21px 0 83px;
+        text-align: center;
     }
     &__news {
         @include flex(row, space-between, center);
