--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -38,7 +38,7 @@
         margin: 77px 0 36px;
     }
     &__box {
-        width: 60%;
+        width: 70%;
         margin-bottom: 92px;
         
         &-container {
@@ -128,7 +128,9 @@
             }
         }
         &__description {
-            margin: 50px 0;
+            width: 70%;
+            margin: 50px 0 36px;
+
         }
         &__box {
             width: 90%;
