--- a/src/components/Feedbacks/Feedbacks.scss
+++ b/src/components/Feedbacks/Feedbacks.scss
@@ -16,6 +16,7 @@
         @include title-font;
         line-height: 72px;
         text-align: center;
+
     }
     &__carousel {
         &-path {
@@ -51,8 +52,8 @@
         flex-wrap: wrap;
     }
     &__profile {
-        width: 39%;
-        height: 226px;
+        width: 41%;
+        height: 200px;
         background: #FFFFFF;
         box-shadow: 7px 7px 30px 5px rgba(66, 96, 84, 0.15);
         border-radius: 70px 0px;
@@ -82,10 +83,14 @@
             height: 126px;
             @include flex(column, center, start);
             margin: 41px 38px 60px 99px;
-            p {
-                &:nth-child(1) {width: 88%;}
-                margin: 0;
-                margin-bottom: 8px;
+             
+        }
+        &-user {
+                &:nth-child(1) {
+                    width: 80%;
+                }
+                margin: 25px 0 8px;
+
                 .feedbacks__profile {
                     &-name {
                         font-family: 'Open Sans';
@@ -104,7 +109,6 @@
                         line-height: 22px;
                         color: $secondary--text--color;
                     }
-                }
             }
         }
         &-description {
@@ -112,8 +116,7 @@
             font-style: normal;
             font-weight: 400;
             font-size: 18px;
-            line-height: 28px;
-            width: 104%;
+            width: 100%;
             color: $secondary--text--color;
         }
     }
@@ -143,7 +146,7 @@
     }
 }
 
-@media screen and (max-width: 1042.9px) {
+@media screen and (min-width: 760px) and (max-width: 1042.9px) {
     .feedbacks {
         &__container {
             padding: 100px 0;
@@ -162,5 +165,49 @@
         &__profile {
             width: 70%;
         }
+    }
+       
+}
+@media screen and (max-width: 760px) {
+    .feedbacks {
+        &__container {
+            padding: 100px 0;
+        }
+        &__title {
+            font-size: 52px;
+            line-height: 52px;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        &__blocks {
+            flex-direction: column;
+            height: 600px;
+            margin-top: 50px;
+        }
+        &__profile {
+            width: 70%;
+        }
+    }
+
+    .feedbacks__profile {
+        &-user {
+            width: 80%;
+        }
+        &-name {
+            font-size: 18px;
+            width: 60%;
+        }
+        &-post {
+            font-size: 11px;
+        }
+        &-photo {
+            display: none;
+        }
+        &-text {
+            margin: 20px;
+        }
+    }
+    .feedbacks__profile-description {
+        font-size: 12px;
     }
 }
